[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.11,<4.0"

dependencies = [
    "aiohttp>=3.12.13",
    "asyncpg>=0.30.0",
    "base58>=2.1.1",
    "cryptography>=45.0.4",
    "solders>=0.26.0",
    "python-telegram-bot>=21.0",
    "aiosqlite>=0.19.0"
]

[tool.poetry]
package-mode = false
